{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 47,
  "lineage": "07ac7c1f-af04-ac92-18aa-f4cc7c120ad9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "etl_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014d2a8190b1bdeb4",
            "arn": "arn:aws:ec2:us-east-2:495599753255:instance/i-01c535ce5eda80742",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "etl-pipeline-aws-instance-profile-dev",
            "id": "i-01c535ce5eda80742",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "etl-key-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c4e9e1dc0818ac2a",
            "private_dns": "ip-10-0-1-243.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-18-227-107-132.us-east-2.compute.amazonaws.com",
            "public_ip": "18.227.107.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:495599753255:key/84321168-064d-4492-bd71-de47c1b2420e",
                "throughput": 0,
                "volume_id": "vol-0b65b60ae883e1efd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088110c8e13551657",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-ec2-dev",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-ec2-dev",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf7a3a272b129665"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.etl_profile",
            "aws_iam_role.etl_role",
            "aws_s3_bucket.etl_bucket",
            "aws_security_group.etl_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:495599753255:internet-gateway/igw-01f878805d9defb7c",
            "id": "igw-01f878805d9defb7c",
            "owner_id": "495599753255",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-igw",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-igw",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "vpc_id": "vpc-0f1d336fc82e270ce"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:495599753255:route-table/rtb-00fc1d035524b5d7b",
            "id": "rtb-00fc1d035524b5d7b",
            "owner_id": "495599753255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f878805d9defb7c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-public-rt",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-public-rt",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1d336fc82e270ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c33eea67cd16bb37",
            "route_table_id": "rtb-00fc1d035524b5d7b",
            "subnet_id": "subnet-088110c8e13551657"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "etl_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:495599753255:security-group/sg-0cf7a3a272b129665",
            "description": "Security group controlado para etl-pipeline-aws",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf7a3a272b129665",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Airflow Webserver",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [
                  "191.217.211.182/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "etl-pipeline-aws-sg-dev",
            "name_prefix": "",
            "owner_id": "495599753255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-sg-dev",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-sg-dev",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1d336fc82e270ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:495599753255:subnet/subnet-088110c8e13551657",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088110c8e13551657",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599753255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-public-subnet",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-public-subnet",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "vpc_id": "vpc-0f1d336fc82e270ce"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:495599753255:vpc/vpc-0f1d336fc82e270ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7284a78ba60bdba",
            "default_route_table_id": "rtb-063a0a4d0ba6f8696",
            "default_security_group_id": "sg-0d71d404c91809333",
            "dhcp_options_id": "dopt-0961fcbd4c0c8bd38",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1d336fc82e270ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063a0a4d0ba6f8696",
            "owner_id": "495599753255",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-vpc",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "etl-pipeline-aws-vpc",
              "Owner": "matheusnbrito",
              "Project": "ETL Clientes/Vendas"
            }
          }
        }
      ]
    }
  ]
}